# Robotics-with-ROS

./: README.md
cubic_polynomial_planner/: CMakeLists.txt  package.xml
cubic_polynomial_planner/include/: cubic_polynomial_planner.hpp  pose_command_server.hpp  pose_planner.h  pose_planner.hpp
cubic_polynomial_planner/launch/: a2.launch  pose_planner.launch
cubic_polynomial_planner/src/: cubic_polynomial_planner.cpp  main.cpp  pose_command_server.cpp  pose_command_server_main.cpp  pose_planner.cpp
dynamic_controller/: CMakeLists.txt  package.xml
dynamic_controller/config/: dynamic_controller_params.yaml
dynamic_controller/include/: dynamic_controller.hpp  joint_controller.hpp  pose_controller.hpp
dynamic_controller/launch/: joint_controller.launch  pose_controller.launch
dynamic_controller/rqt_multiplot/: rqt_1.xml  rqt_2.xml  rqt_multiplot.xml
dynamic_controller/src/: controller.cpp  dynamic_controller.cpp  joint_controller.cpp  joint_controller_main.cpp  pose_controller.cpp  pose_controller_main.cpp
highlevel_controller/: CMakeLists.txt  package.xml
highlevel_controller/config/: a5.yaml  a6.yaml  a6_part_4.yaml  final.yaml
highlevel_controller/include/: action_client.hpp  pick_and_place_client.hpp
highlevel_controller/launch/: a5.launch  a6.launch  final.launch
highlevel_controller/src/: action_client.cpp  client.cpp  pick_and_place_client.cpp  pick_and_place_main.cpp
highlevel_controller/worlds/: a8_modified.world
highlevel_msgs/: CMakeLists.txt  package.xml
highlevel_msgs/action/: PoseCommand.action
highlevel_msgs/srv/: SetKD.srv
keyboard_controller/: CMakeLists.txt  package.xml
keyboard_controller/launch/: a1.launch
keyboard_controller/src/: keyboard_controller.cpp
kinematic_controller/: CMakeLists.txt  package.xml
kinematic_controller/include/: kinematic_controller.hpp
kinematic_controller/launch/: controller.launch
kinematic_controller/src/: kinematic_controller.cpp  main.cpp
potential_field_planner/: CMakeLists.txt  package.xml
potential_field_planner/include/: potential_field_planner.hpp
potential_field_planner/launch/: joint_planner.launch
potential_field_planner/src/: joint_space_planner.cpp  potential_field_planner.cpp
