<?xml version="1.0"?>
<package format="2">
  <name>cubic_polynomial_planner</name>
  <version>0.0.0</version>
  <description>The cubicpolynomialplanner package</description>
  <author email="samson.lokwakai@mail.mcgill.ca">Ekeno</author>
  <maintainer email="samson.lokwakai@mail.mcgill.ca">Ekeno</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>highlevel_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
