<?xml version="1.0"?>
<package format="2">
  <name>highlevel_controller</name>
  <version>0.1.0</version>
  <description>
    ROS package for choosing either dynamics or kinematics controller
  </description>

  <maintainer email="samson.lokwakai@mail.mcgill.ca">Ekeno</maintainer>

  <license>BSD</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime and build dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>eigen3</depend>
  <depend>highlevel_msgs</depend>
  <depend>control_msgs</depend>
  <depend>dynamic_controller</depend>

  <!-- Include ROS message generation dependencies -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
