<?xml version="1.0"?>
<package format="2">
  <name>highlevel_msgs</name>
  <version>0.0.0</version>
  <description>The highlevel_msgs package</description>

  <maintainer email="samson.lokwakai@mail.mcgill.ca">Ekeno</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>genmsg</depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>

</package>
