<?xml version="1.0"?>
<package format="2">
  <name>keyboard_controller</name>
  <version>0.0.1</version>
  <description>The keyboard_controller package</description>
  <maintainer email="samson.lokwakai@mail.mcgill.ca">Ekeno</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>

