<?xml version="1.0"?>
<package format="2">
  <name>kinematic_controller</name>
  <version>0.0.0</version>
  <description>The kinematic_controller package</description>

  <maintainer email="samson.lokwakai@mail.mcgill.ca">Ekeno</maintainer>
  <author email="samson.lokwakai@mail.mcgill.ca">Ekeno</author>

  <license>BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>Eigen3</depend>
  <depend>pinocchio</depend>

  <export>
    <!-- Add any exported flags here -->
  </export>
</package>
